<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HinduGodSymbology</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Launcher_button1">God Symbology</string>
    <string name="Launcher_button2">How to Use</string>
    <string name="Launcher_button3">About the App</string>
    <string name="Launcher_button4">Credentials</string>
    <string name="Launcher_button5">Contact</string>
    

</resources>
