<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/launcher_bg"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >
    <Button
        android:id="@+id/button1"
        android:layout_marginBottom="14dp"
        android:layout_width="112dp"
        android:layout_height="35dp"
        android:background="@drawable/button_back"
        android:layout_gravity="center_horizontal"
        android:text="@string/Launcher_button1" />

    <Button
        android:id="@+id/button2"
        android:layout_marginBottom="14dp"
        android:layout_width="112dp"
        android:layout_height="35dp"
        android:background="@drawable/button_back"
        android:layout_gravity="center_horizontal"
        android:text="@string/Launcher_button2" />

    <Button
        android:id="@+id/button3"
        android:layout_marginBottom="14dp"
        android:layout_width="112dp"
        android:layout_height="35dp"
	   	android:layout_gravity="center_horizontal"
        android:text="@string/Launcher_button3"
        android:background="@drawable/button_back_select"/>
    
    <Button
        android:id="@+id/button4"
        android:layout_marginBottom="14dp"
        android:layout_width="112dp"
        android:layout_height="35dp"
        android:background="@drawable/button_back"
        android:layout_gravity="center_horizontal"
        android:text="@string/Launcher_button4" />

    <Button
        android:id="@+id/button5"
        android:layout_marginBottom="140dp"
        android:layout_width="112dp"
        android:layout_height="35dp"
        android:background="@drawable/button_back"
        android:layout_gravity="center_horizontal"
        android:text="@string/Launcher_button5" />

</LinearLayout>